@@ -1,3 +1,8 @@
+2003-11-04 Tom Copeland  <tom@infoether.com>
+
+	* www/survey/index.php:
+	Implemented RFE [ #576 ] Survey title could be clickable
+
 2003-10-21  Roland Mas  <99.roland.mas@aist.enst.fr>
 
 	* www/pm/gantt.php: Exit with a (more) helpful message if the
